<resources>
    <string name="app_name">SP4U</string>
    <string name="app_slogan">O melhor de SP nas suas mãos</string>
    <string name="sertanejo">sertanejo</string>
    <string name="subTitile">precisamos entender o que você curte quando quer dar um rolê por ai.... vou te fazer algumas perguntas, vai ser rápidinho, prometo!</string>
    <string name="title">uhull, bem-vindx ao SP4U!</string>
    <string name="trap" translatable="false">trap</string>
    <string name="eletronica">eletronica</string>
    <string name="gospel" translatable="false">gospel</string>
    <string name="hip_hop" translatable="false">hip-hop</string>
    <string name="metal" translatable="false">metal</string>
    <string name="rap" translatable="false">rap</string>
    <string name="classico">classico</string>
    <string name="pop" translatable="false">pop</string>
    <string name="trance" translatable="false">trance</string>
    <string name="jazz" translatable="false">jazz</string>
    <string name="forro" translatable="false">forro</string>
    <string name="kpop" translatable="false">kpop</string>
    <string name="samba" translatable="false">samba</string>
    <string name="mpb" translatable="false">mpb</string>
    <string name="folk" translatable="false">folk</string>
    <string name="rock" translatable="false">rock</string>
    <string name="axe" translatable="false">axe</string>
    <string name="funk" translatable="false">funk</string>
    <string name="pagode" translatable="false">pagode</string>
    <string name="qual_voc_prefere">qual você prefere?</string>
    <string name="restaurantes">restaurantes</string>
    <string name="bares">bares</string>
    <string name="baladas">baladas</string>
    <string name="pub">pub</string>
    <string name="qual_o_seu_estilo_de_m_sica">qual é o seu estilo de música?</string>
    <string name="user_profile_alterar_foto">alterar foto de perfil</string>
    <string name="user_profile_apelido">João Teodoro</string>
    <string name="user_profile_configuracoes_basicas">configurações básicas</string>
    <string name="user_profile_alterar_email">alterar e-mail</string>
    <string name="user_profile_alterar_senha">alterar senha</string>
    <string name="user_profile_nome">nome</string>
    <string name="user_profile_nome_social">nome social</string>
    <string name="user_profile_data_nascimento">data de nascimento</string>
    <string name="user_profile_email">e-mail</string>
    <string name="user_profile_telefone">telefone</string>
    <string name="user_profile_genero">gênero</string>
    <string name="user_profile_botao_concluir">concluir</string>
    <string name="user_profile_hint_nome">Digite o nome completo</string>
    <string name="user_profile_hint_nome_social">Digite o nome social</string>
    <string name="user_profile_hint_data_nascimento">00/00/0000</string>
    <string name="user_profile_hint_email">email@email.com</string>
    <string name="user_profile_hint_telefone">(XX) 00000-0000</string>
    <string name="user_profile_hint_genero">Digite o seu gênero</string>
    <string name="user_profile_email_atual">e-mail atual</string>
    <string name="user_profile_email_novo">novo e-mail</string>
    <string name="user_profile_hint_email_novo">novoemail@email.com</string>
    <string name="user_profile_confirma_email">confirmar novo e-mail</string>
    <string name="user_profile_botao_alterar_email">alterar e-mail</string>
    <string name="user_profile_senha_antiga">senha antiga</string>
    <string name="user_profile_hint_senha">*****************</string>
    <string name="user_profile_senha_nova">nova senha</string>
    <string name="user_profile_confirma_senha">confirmar nova senha</string>
    <string name="user_profile_botao_alterar_senha">alterar senha</string>
    <string name="user_email_alterado">Email alterado</string>
    <string name="user_email_nao_existe">Email não existe</string>
    <string name="user_senha_incorreta">Senha incorreta</string>
    <string name="user_senha_alterada">Senha alterada</string>
    <string name="feels_titulo">Como você está se sentindo hoje?</string>
    <string name="feels_feliz">feliz</string>
    <string name="feels_animado">animado</string>
    <string name="feels_desanimado">desanimado</string>
    <string name="feels_com_fome">com fome</string>
    <string name="feels_fogoso">fogoso</string>
    <string name="feels_entediado">entediado</string>
    <string name="todo">TODO</string>
    <string name="recanto">Recanto</string>
    <string name="restobar_r_stico_e_aconchegante_serve_op_es_de_petiscos_mistos_da_casa_com_rea_externa_e_boemia_familiar">Restobar rústico e aconchegante serve opções de petiscos mistos da casa com área externa e boemia familiar.</string>
    <string name="com_base_no_seu_humor_recomendamos">com base no seu humor recomendamos:</string>
    <string name="solteiros">solteiros</string>
    <string name="casais">casais</string>
    <string name="amigxs">amigxs</string>
    <string name="com_base_no_seu_humor">com base no seu humor</string>
    <string name="os_mais_frequentados_da_sua_regi_o">os mais frequentados da sua região</string>
    <string name="para_os_econ_micos_do_rol">para os econômicos do rolê</string>
    <string name="para_os_solteir_es">para os solteirões</string>
    <string name="para_os_casalz_es_da_por">para os casalzões da por**</string>
    <string name="caos">Caos</string>
    <string name="casa_noturna_descolada_com_pegada_alternativa_e_shows_animados_por_sob_efeitos_luminosos">Casa noturna descolada com pegada alternativa e shows animados sob efeitos luminosos.</string>
    <string name="estabilishment_titulo_cadastro_estabelecimento">você é dono de um estabelecimento? </string>
    <string name="estabilishment_subtitulo_cadastro_estabelecimento">se cadastre na nossa plataforma SP4U para empresa e aumente seu público!</string>
    <string name="estabilishment_informacoes_cadastro_estabelecimento">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula finibus diam blandit maximus. Donec vulputate molestie est eget rhoncus. Etiam non laoreet ex. Nullam fauci</string>
    <string name="estabilishment_cadastro_estabelecimento">cadastre-se</string>
    <string name="login_senha_email_incorreto">Email ou senha incorretos</string>
    <string name="validator_null">Deve ser preenchido</string>
    <string name="validator_senhas_diferentes">As senhas devem ser iguais</string>
    <string name="validator_emails_diferentes">Os emails devem ser iguais</string>
    <string name="requisicao_erro_interno">Erro interno</string>
    <string name="requisicao_email_ja_cadastrado">Email já cadastrado</string>
    <string name="requisicao_login_expirado">Login expirado</string>
    <string name="estabilishment_config_nome_estabelecimento">Caos</string>
    <string name="estabilishment_config_menu_config_basica">configurações básicas</string>
    <string name="estabilishment_config_menu_config_role">descrição do rolê</string>
    <string name="estabilishment_config_menu_config_img">alterar imagens</string>
    <string name="estabilishment_config_basica_razao_social">razão social</string>
    <string name="estabilishment_config_basica_edite_razao_social">Digite a razão social</string>
    <string name="estabilishment_config_basica_nome_fantasia">nome fantasia</string>
    <string name="estabilishment_config_basica_edite_nome_fantasia">Digite o nome fantasia</string>
    <string name="estabilishment_config_basica_telefone">telefone</string>
    <string name="estabilishment_config_basica_edite_telefone">Digite o telefone</string>
    <string name="estabilishment_config_basica_endereço">endereço</string>
    <string name="estabilishment_config_basica_edite_endereco">Digite o endereço</string>
    <string name="estabilishment_config_basica_cep">cep</string>
    <string name="estabilishment_config_basica_edite_cep">Digite o cep</string>
    <string name="estabilishment_config_basica_bairro">bairro</string>
    <string name="estabilishment_config_basica_edite_bairro">Digite o bairro</string>
    <string name="estabilishment_config_basica_cidade">cidade</string>
    <string name="estabilishment_config_basica_estado">estado</string>
    <string name="estabilishment_config_basica_numero">numero</string>
    <string name="estabilishment_config_basica_complemento">complemento</string>
    <string name="estabilishment_config_basica_email">email</string>
    <string name="estabilishment_config_basica_edite_email">Digite seu email</string>
    <string name="estabilishment_config_basica_concluir">Concluir</string>
    <string name="estabilishment_config_desc_role_atual">descrição atual</string>
    <string name="estabilishment_config_desc_role_cardapio_vegetariano">possui cardápio vegetariano?</string>
    <string name="estabilishment_config_desc_role_vegano">possui cardápio vegano?</string>
    <string name="estabilishment_config_desc_role_animais">são permitidos animais no local?</string>
    <string name="estabilishment_config_desc_role_maioridade">menores de idade são permitidos?</string>
    <string name="estabilishment_config_desc_role_tipo_role">o rolê é um</string>
    <string name="estabilishment_config_desc_role_tipo_musica">tipo de música mais tocado</string>
    <string name="estabilishment_config_desc_role_concluir">concluir</string>
    <string name="menu_roles">rolês</string>
    <string name="menu_humor">humor</string>
    <string name="menu_perfil">perfil</string>
    <string name="menu_empresa">empresa</string>
    <string name="titulo_esqueceu_senha">Esqueceu sua senha?</string>
    <string name="nova_senha">nova senha</string>
    <string name="et_nova_senha">Digite sua nova senha</string>
    <string name="confirmar_nova_senha">confirme nova senha</string>
    <string name="et_confirmar_nova_senha">Confirmar sua nova senha</string>
    <string name="btn_esqueceu_senha">confirmar</string>
    <string name="titulo_login">login</string>
    <string name="login_email">e-mail</string>
    <string name="et_login_email">Digite seu e-mail</string>
    <string name="login_senha">senha</string>
    <string name="et_login_senha">Digite sua senha</string>
    <string name="login_cadastrar">cadastre-se</string>
    <string name="login_esqueceu_senha">esqueceu senha</string>
    <string name="btn_login_entrar">entrar</string>
    <string name="titulo_cadastro">cadastro</string>
    <string name="cadastro_nome">nome</string>
    <string name="et_cadastro_nome">Digite seu nome</string>
    <string name="cadastro_nome_social">nome social</string>
    <string name="et_cadastro_nome_social">Digite seu nome social</string>
    <string name="cadastro_nascimento">data de nascimento</string>
    <string name="et_cadastro_nascimento">aaaa-mm-dd</string>
    <string name="cadastro_telefone">telefone</string>
    <string name="et_cadastro_telefone">(11) XXXXX-XXXX</string>
    <string name="cadastro_genero">genero</string>
    <string name="et_cadastro_genero">Escolha seu genero</string>
    <string name="cadastro_email">e-mail</string>
    <string name="et_cadastro_email">Digite seu e-mail</string>
    <string name="cadastro_senha">senha</string>
    <string name="et_cadastro_senha">Digite sua senha</string>
    <string name="cadastro_confirmar_senha">confirmar senha</string>
    <string name="et_cadastro_confirmar_senha">confirme sua senha</string>
    <string name="cadastro_login">Já é cadastrado? Faça seu login</string>
    <string name="btn_cadastro">confirmar</string>
    <string name="titulo_addiciotnal_filters">quer refinar sua busca?</string>
    <string name="addfilters_vegetariano">Possui cardápio vegetariano?</string>
    <string name="addfilters_vegano">Possui cardápio vegano?</string>
    <string name="addfilters_animal">Animais são permitidos?</string>
    <string name="addfilters_maioridade">Permitidos menores de idade?</string>
    <string name="btn_addfilters">Vamos la!</string>
</resources>