<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <Button
            android:id="@+id/bt_roles"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Grey"
            android:padding="7dp"
            android:onClick="goToHome"
            android:text="@string/menu_roles"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_humor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Grey"
            android:padding="5dp"
            android:text="@string/menu_humor"
            android:onClick="goToHumor"
            android:textAllCaps="false"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Grey"
            android:padding="5dp"
            android:text="@string/menu_perfil"
            android:textAllCaps="false"
            android:onClick="goToBasicSettings"
            android:textColor="@color/White"
            android:textSize="16sp" />

        <Button
            android:id="@+id/bt_empresa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/Grey"
            android:padding="5dp"
            android:text="@string/menu_empresa"
            android:textAllCaps="false"
            android:onClick="searchEstablishment"
            android:textColor="@color/White"
            android:textSize="16sp" />

    </LinearLayout>

</FrameLayout>