<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/Fund">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="2dp">

    <TextView
        android:id="@+id/tv_titulo_esqueceu_senha"
        android:layout_width="250dp"
        android:layout_height="80dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/montserrat"
        android:text="@string/titulo_esqueceu_senha"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:layout_marginTop="50dp"
        android:textSize="32sp"
        tools:layout_editor_absoluteY="60dp"
        />


    <TextView
        android:id="@+id/tv_nova_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo_esqueceu_senha"
        android:layout_marginTop="68dp"
        android:text="@string/nova_senha"
        android:textColor="@color/White"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="66dp"
        />

    <EditText
        android:id="@+id/et_nova_senha"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nova_senha"
        android:layout_marginTop="8sp"
        android:background="@drawable/et_style_blue"
        android:textColorHint="@color/White"
        android:fontFamily="@font/montserrat"
        android:inputType="textPassword"
        android:hint="@string/et_nova_senha"
        android:paddingLeft="10dp"
        android:textColor="@color/Fund"
        />

    <TextView
        android:id="@+id/tv_confirma_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_nova_senha"
        tools:layout_editor_absoluteX="66dp"
        android:layout_marginTop="20dp"
        android:text="@string/confirmar_nova_senha"
        android:textColor="@color/White"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/et_confirmar_senha"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_confirma_senha"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/Fund"
        android:background="@drawable/et_style_blue"
        android:textSize="16sp"
        android:textColorHint="@color/White"
        android:hint="@string/et_confirmar_nova_senha"
        android:paddingLeft="10dp"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"
        />

    <Button
        android:id="@+id/bt_confirmar"
        android:layout_width="240dp"
        android:layout_height="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confirmar_senha"
        android:fontFamily="@font/montserrat"
        android:layout_marginTop="60dp"
        android:background="@color/Blue"
        android:text="@string/btn_esqueceu_senha"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:onClick="savePassword"
        android:layout_marginLeft="15dp"
        />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>